Bug 1320651 - Only crash for real builtin sheet error. r=bz a=jcristau